--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,16 @@ body {
   left: 0;
   z-index: -1;
 }
+
+@media screen and (max-width: 799px) {
+  .App {
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    padding: 2.5rem 1.5rem;
+  }
+/*  .side {
+    margin-bottom: 3rem;
+    width: 100%;
+  }*/
+}
