--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 @media screen and (max-width: 799px) {
   .App {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     padding: 2rem 1rem;
