--- a/src/Components/ImageLinkForm/ImageLinkForm.css
+++ b/src/Components/ImageLinkForm/ImageLinkForm.css
@@ -12,6 +12,7 @@
 
 
 @media screen and (max-width: 799px) {
+	width: 90%,
 	.align-it {
 		display: flex;
 		flex-direction: column;
@@ -25,4 +26,5 @@
 	.w-30{
 		width: 40%;
 	}
+
 }
